Front Page Updates

--- a/frontPage.html
+++ b/frontPage.html
@@ -4,6 +4,7 @@
     </ons-toolbar>-->
     <h3 style="text-align: center;">Welcome to</h3>
     <p style="text-align: center; padding: 10px 30px;"><img src="images/logo.jpg" alt="logo" style="width: 100%; max-width: 800px;" /></p>
+    <p style="text-align: center; padding: 10px 30px;">Get <strong>Full</strong><br><strong>Mechanical</strong> and Vehicle History <strong>Assessment</strong><br>before you <strong>buy</strong> a Used-Car</p>
     <div style="padding: 10px 30px;">
         <ons-button modifier="largeFront" ng-click="appNav.pushPage('login.html', { animation : 'fade' })">Login</ons-button>
         <p></p>
