--- a/awaitRSVPResponse.html
+++ b/awaitRSVPResponse.html
@@ -10,5 +10,7 @@
         <p><img src="images/logo_gear.png" alt="Gear" style="width: 30%;" /></p>
         <p>Appointment request has been send</p>
         <p>Please be patient, we’ll come back to you shortly!</p>
+        <p><ons-button ng-click="loadPage('home.html')">Home</ons-button></p>
+        <p><ons-button modifier="large--quiet" ng-click="cancelRequest(myAppointID)">Cancel Request</ons-button></p>
     </div>
 </ons-page>
