--- a/liveAppointWait.html
+++ b/liveAppointWait.html
@@ -20,6 +20,6 @@
         <p><br></p>
         <p><br></p>
         <p><br></p>
-        <ons-button modifier="large--quiet" ng-click="cancelRequest(liveConfimApp.appointID)" style="color: #000;">Cancel Request</ons-button>
+        <ons-button modifier="large--quiet" ng-click="cancelRequest(myAppointID)" style="color: #000;">Cancel Request</ons-button>
     </div>
 </ons-page>
