--- a/mechView/appointmentWait.html
+++ b/mechView/appointmentWait.html
@@ -12,4 +12,7 @@
         <p><img src="images/logo_gear.png" alt="Gear" style="width: 30%;" /></p>
         <p>Please be patient...</p>
     </div>
+    <section id="mapActions">
+        <ons-button modifier="large--quiet" ng-click="cancelRequest(myAppointID)" style="color: #000;">Cancel Request</ons-button>
+    </section>
 </ons-page>
