--- a/mechView/appointments.html
+++ b/mechView/appointments.html
@@ -20,5 +20,7 @@
             </ons-list-item>
         </ons-list>
     </div>
-    <h4 ng-if="curAppointmentList.length === 0">No appointment available!</h4>
+    <div class="pagecontent" ng-if="curAppointmentList.length === 0">
+        <h4 >No appointment available!</h4>
+    </div>
 </ons-page>
