--- a/mechView/inspections.html
+++ b/mechView/inspections.html
@@ -17,5 +17,5 @@
             </ons-list-item>
         </ons-list>
     </div>
-    <h4 ng-if="user.inspections.length === 0">No Inspections available!</h4>
+    <h4 ng-if="user.inspections.length === 0" style="padding-left: 20px">No Inspections available!</h4>
 </ons-page>
