--- a/notifications.html
+++ b/notifications.html
@@ -16,7 +16,7 @@
                     <img class="list-item__thumbnail" src="images/Payment.png">
                 </div>
                 <div class="center">
-                    {{notes.date}}<br>
+                    {{notes.time}}<br>
                     {{notes.address}}
                 </div>
             </ons-list-item>
