--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
                     <ons-checkbox input-id="checkUpdates" ng-model="user.updates" checked></ons-checkbox>
                 </label>
                 <label for="checkUpdates" class="center">
-                    I authorise Cars One100 to proses my information for a Better User Experience, Marketing and Extra Valued added Products.
+                    I authorise Cars One100 to process my information for a Better User Experience, Marketing and Extra Valued added Products.
                 </label>
             </ons-list-item>
         </ons-list>
