--- a/mechView/settings.html
+++ b/mechView/settings.html
@@ -10,7 +10,7 @@
     </div>
     <div style="background-color: #f2f2f2;" ng-if="userLoggedin">
         <ons-row>
-            <ons-col width="100px"><img ng-src="{{user.img}}" alt="mechFace" style="width: 80px; padding: 10px;" ></ons-col>
+            <ons-col width="100px"><img ng-src="{{user.img}}" alt="mechFace" style="max-width: 80px; max-height: 80px; padding: 10px;" ></ons-col>
             <ons-col style=" text-align: left; padding-top: 20px">
                 {{user.firstName}} {{user.lastName}}<br>
                 {{user.cellNo}}<br>
