--- a/navigateFrom.html
+++ b/navigateFrom.html
@@ -17,7 +17,7 @@
     <ons-bottom-toolbar style="background-color: #f1f1f1; height: 110px;">
         <div style="padding: 10px 30px;">
             <ons-row>
-                <ons-col width="100px"><img ng-src="{{liveConfimApp.mechImageURL}}" alt="mechFace" style="width: 80px;" ></ons-col>
+                <ons-col width="100px"><img ng-src="{{liveConfimApp.mechImageURL}}" alt="mechFace" style="max-width: 80px; max-height: 80px;" ></ons-col>
                 <ons-col style="text-align: left;">
                     {{liveConfimApp.mechName}}<br>
                     {{liveConfimApp.carMake}}<br>
